<h5>3.21.0 RC-1   [2020-07-25]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.8
<hr>
- fix issue #19 (cesagonchu/mamba)
- cosmetics, cleanup (mamba)

<h5>3.21.0 Beta 2   [2019-07-16]</h5>  Dev: XOOPS 2.5.10, PHP 7.3.7
<hr>
- fixed Reflected xss bug reported by dipuhasan (mamba)
- cosmetics (mamba)
- updated PhpDoc (mamba)
- added # of messages in Admin (mamba)
- added import/export of data (mamba)
- added "Hide import buttons" (mamba)
- added /config folder (mamba)
- added migrate (mamba)


<h5>3.21.0 Beta 1   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.9, PHP 7.2.11
<hr>
- namespaces (mamba)
- class autoloading (mamba)
- converted RGB color to #HEX (mamba)
- fix: Anonymous can not add msg even if you enable it (xsell/mamba)
- fix: still asking for email, even if disabled (xsell/mamba)
- test data (mamba)
- Yoda (mamba)

WORK IN PROGRESS

3.20. Final      2017-01-25
---------------------------
fix menu.php bug (xsell)

3.20. Beta 1      2017-01-23
---------------------------
- Hardening to type safe (mamba)
- update Help (mamba)
- changed _handler to Handler (mamba)
- changed to ->renderButton('left') (mamba)
- removed '/' from void HTML elements (&lt;br&gt;, &lt;img&gt;, etc) (mamba)
- HTML 5: removed 'selected' and 'checked' (mamba)
- short array syntax (mamba)
- added install checks for PHP 5.5 and XOOPS 2.5.8 (mamba)
- added auto-creation of upload folders (mamba)
- moved functions to Util class (mamba)
- fix "delete" bug in admin (xsell/mamba)
- started conversion to XMF (mamba)


3.10. FINAL      2016-10-18
---------------------------
- fixed submission bug (safeinsanity/mamba)

3.10. RC 2      NOT RELEASED
---------------------------
- removed "@version" (mamba)
- XOOPS 2.5.8 and PHP 7 (mamba)
- standardization with addNavigation(basename(__FILE__)) (mamba)
- removed unneeded double quotes and parenthesis (mamba)
- improved type comparison (mamba)
- standardization with < br > (mamba)
- updated function visibility (mamba)
- reference mismatch (mamba)