@@ -1,3 +1,6 @@
 -
     ip_id: '1'
     ip_value: '::1'
+-
+    ip_id: '2'
+    ip_value: 7.255.255.255
