@@ -1,7 +1,13 @@
+<h5>3.21.0 RC-2   [2020-07-26]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.8
+<hr>
+- fix issue #21 (cesagonchu/mamba)
+- renamed image, cosmetics (mamba)
+
 <h5>3.21.0 RC-1   [2020-07-25]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.8
 <hr>
 - fix issue #19 (cesagonchu/mamba)
 - cosmetics, cleanup (mamba)
+
 
 <h5>3.21.0 Beta 2   [2019-07-16]</h5>  Dev: XOOPS 2.5.10, PHP 7.3.7
 <hr>
